<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Switch
            android:id="@+id/s_order_geo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_switch_text"
            android:textOn="@string/yes"
            android:textOff="@string/no"
            android:textSize="20sp"
            android:defaultFocusHighlightEnabled="true"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="20sp"
            android:inputType="phone"
            app:met_floatingLabel="normal"
            android:layout_marginTop="5dp"
            android:maxLength="12"
            android:visibility="invisible"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/met_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:textSize="20sp"
            android:inputType="text"
            app:met_floatingLabel="normal"
            app:met_singleLineEllipsis="true"
            android:visibility="invisible"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>